--- a/nlp-disaster/start.ipynb
+++ b/nlp-disaster/start.ipynb
@@ -919,35 +919,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 126,
    "id": "fe4efc85-a747-4687-99d6-14ae680400fc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(DatasetDict({\n",
-       "     train: Dataset({\n",
-       "         features: ['id', 'keyword', 'location', 'text', 'target'],\n",
-       "         num_rows: 7613\n",
-       "     })\n",
-       " }),\n",
-       " DatasetDict({\n",
-       "     train: Dataset({\n",
-       "         features: ['id', 'keyword', 'location', 'text'],\n",
-       "         num_rows: 3263\n",
-       "     })\n",
-       " }))"
+       "{'id': [1, 4, 5, 6, 7],\n",
+       " 'keyword': [None, None, None, None, None],\n",
+       " 'location': [None, None, None, None, None],\n",
+       " 'text': ['Our Deeds are the Reason of this #earthquake May ALLAH Forgive us all',\n",
+       "  'Forest fire near La Ronge Sask. Canada',\n",
+       "  \"All residents asked to 'shelter in place' are being notified by officers. No other evacuation or shelter in place orders are expected\",\n",
+       "  '13,000 people receive #wildfires evacuation orders in California ',\n",
+       "  'Just got sent this photo from Ruby #Alaska as smoke from #wildfires pours into a school '],\n",
+       " 'target': [1, 1, 1, 1, 1]}"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_dataset, test_dataset"
+    "train_dataset[\"train\"][:5]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "be453339-e7cb-4744-9c6f-62dfb4e584f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.03436636924743652,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": 38,
+       "postfix": null,
+       "prefix": "",
+       "rate": null,
+       "total": 8,
+       "unit": "ba",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "57f820aa7a884481a824ef2333ea1829",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/8 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "def preprocess_function(examples):\n",
+    "    return tokenizer(examples[\"text\"], truncation=True)\n",
+    "\n",
+    "encoded_train_dataset = train_dataset.map(preprocess_function, batched=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "id": "08c44137-6e5c-4d77-b2dd-a841495e9228",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at bert-base-cased were not used when initializing BertForSequenceClassification: ['cls.predictions.bias', 'cls.seq_relationship.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.decoder.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.bias', 'cls.predictions.transform.dense.weight']\n",
+      "- This IS expected if you are initializing BertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-cased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoModelForSequenceClassification, Trainer, TrainingArguments\n",
+    "\n",
+    "model = AutoModelForSequenceClassification.from_pretrained(model_checkpoint, num_labels=2)                                                           "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c74dd138-fd86-4ef8-a0a2-dccbc004d312",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metric_name = \"accuracy\"\n",
+    "model_name = model_checkpoint.split(\"/\")[-1]\n",
+    "batch_size = 16\n",
+    "\n",
+    "\n",
+    "args = TrainingArguments(\n",
+    "    f\"{model_name}-finetuned-{task}\",\n",
+    "    evaluation_strategy = \"epoch\",\n",
+    "    save_strategy = \"epoch\",\n",
+    "    learning_rate=2e-5,\n",
+    "    per_device_train_batch_size=batch_size,\n",
+    "    per_device_eval_batch_size=batch_size,\n",
+    "    num_train_epochs=5,\n",
+    "    weight_decay=0.01,\n",
+    "    load_best_model_at_end=True,\n",
+    "    metric_for_best_model=metric_name,\n",
+    "    push_to_hub=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50f78a0a-1f07-483f-8602-e2a28ed74eeb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
